--- a/src/com/keita/stylesheet/Style.css
+++ b/src/com/keita/stylesheet/Style.css
@@ -12,3 +12,12 @@
     -fx-text-fill: #fff;
     -fx-font-size: 18px;
 }
+
+#button1, #button2, #button3, #button4, #button5, #button6, #button7, #button8, #button9 {
+    -fx-font-size: 18px;
+    -fx-min-width: 120px;
+    -fx-padding: 0, 10px 0 10x;
+    -fx-border-insets: 5px;
+    -fx-border: none;
+
+}
