--- a/src/com/keita/fxml/interface.fxml
+++ b/src/com/keita/fxml/interface.fxml
@@ -56,6 +56,9 @@
                </children>
             </Pane>
             <Label fx:id="playerTurn" layoutX="28.0" layoutY="319.0" text="Player turn" />
+            <Button fx:id="reMatch" layoutX="453.0" layoutY="314.0" mnemonicParsing="false" />
+            <Button fx:id="newGame" layoutX="519.0" layoutY="314.0" mnemonicParsing="false" />
+            <Button fx:id="endGame" layoutX="588.0" layoutY="314.0" mnemonicParsing="false" />
          </children>
          <padding>
             <Insets left="15.0" right="15.0" />
