--- a/src/com/keita/stylesheet/Style.css
+++ b/src/com/keita/stylesheet/Style.css
@@ -1,5 +1,10 @@
+* {
+    -fx-primary: #2A2E37;
+    -fx-secondary: #FFFF8D;
+    -fx-primarytext: #B2B2B2;
+}
 .root {
-    -fx-background-color: #000;
+    -fx-background-color: -fx-primary;
 }
 
 .tool-bar {
